Bug 126912 - Mouse wheel no longer works
Summary: Mouse wheel no longer works
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: high major
Assignee: Stephan Bergmann
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-08-14 08:53 UTC by Xisco Faulí
Modified: 2019-08-15 11:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-08-14 08:53:17 UTC
Steps to reproduce:
1. Open calc or writer
2. Try to scroll down/up using the mouse wheel

-> Nothing happens

Reproduced in ( also with GTK3 )

Version: 6.4.0.0.alpha0+
Build ID: 744f70386727c78a19bd7c1de7425392b98783c7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-08-14 08:54:05 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2abea7b8799f20ae2f47bb9f938670dea4f4f09f

author	Stephan Bergmann <sbergman@redhat.com>	2019-08-13 14:32:47 +0200
committer	Stephan Bergmann <sbergman@redhat.com>	2019-08-13 17:44:50 +0200
commit 2abea7b8799f20ae2f47bb9f938670dea4f4f09f (patch)
tree 59707c1b6e03aedc852371b132597eb46cd56299
parent f8d6c00d4c6d2e5f63dc660069c858bdc8affec6 (diff)
Fix Clang 10 -Werror,-Wimplicit-int-float-conversion

Bisected with: bibisect-linux64-6.4

Adding Cc: to Stephan Bergmann
Comment 2 Commit Notification 2019-08-14 11:57:41 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d3d13140f0036c53aa74820b41acfeffa3572168%5E%21

tdf#126912: Fix convertsToAtLeast/Most mismatch

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2019-08-15 11:30:43 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: fe00a724a918606e5c8c2c32b155bc50b33d56bd
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Stephan, thanks for fixing this issue!