tdf#126912: Fix convertsToAtLeast/Most mismatch

...introduced with 2abea7b8799f20ae2f47bb9f938670dea4f4f09f "Fix Clang 10
-Werror,-Wimplicit-int-float-conversion"

Change-Id: Ic1eb21e61695177729305e429a5f17daadaab9ae
Reviewed-on: https://gerrit.libreoffice.org/77447
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>