vcl/source/window/window2.cxx
@@ -600,9 +600,9 @@ static void lcl_HandleScrollHelper( ScrollBar* pScrl, double nN, bool isMultiply
 
             const double fVal = nNewPos - nN;
 
-            if ( !o3tl::convertsToAtMost(fVal, LONG_MIN) )
+            if ( !o3tl::convertsToAtLeast(fVal, LONG_MIN) )
                 nNewPos = LONG_MIN;
-            else if ( !o3tl::convertsToAtLeast(fVal, LONG_MAX) )
+            else if ( !o3tl::convertsToAtMost(fVal, LONG_MAX) )
                 nNewPos = LONG_MAX;
             else
                 nNewPos = static_cast<long>(fVal);
